@@ -19,6 +19,9 @@ New Features in taskwarrior 2.4.0
     the urgency values of the dependency chain.
   - Listing breaks now supported.  See 'man taskrc'.
   - New fish shell completion script.
+  - The filter form 'name:value' now maps to the partial match operator '=',
+    rather than the exact match operator, '=='.  This means that dates now
+    match on the day by default, not the time also.
   - Hooks.
 
 New commands in taskwarrior 2.4.0
